--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>rossbower.me</title>
   <link href="style.css" rel="stylesheet"/>
+  <link href="font-awesome-4.6.3/css/font-awesome.min.css" rel "stylesheet"/>
 </head>
 
 
@@ -14,11 +15,10 @@
 
     <a>>_CS52</a>
 
-
     <ul>
-      <li id="product"> Product </li>
-      <li id="pricing"> Pricing </li>
-      <li id="support"> Support </li>
+      <li> Product </li>
+      <li> Pricing </li>
+      <li> Support </li>
       <li> Sign in </li>
     </ul>
 
@@ -93,6 +93,8 @@
     <li> Facebook </li>
   <ul>
 </div>
+
 </footer>
 </body>
+
 </html>
