pretty much done :)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>rossbower.me</title>
   <link href="style.css" rel="stylesheet"/>
-  <link href="font-awesome-4.6.3/css/font-awesome.min.css" rel "stylesheet"/>
+  <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet"/>
 </head>
 
 
@@ -87,10 +87,10 @@
 </div>
 
 <div class="footmenu">
-  <ul id="contact">
+  <ul>
     <li> Contact: </li>
-    <li> Twitter </li>
-    <li> Facebook </li>
+    <li> <i class="fa fa-facebook" aria-hidden="true"></i> </li>
+    <li> <i class="fa fa-twitter" aria-hidden="true"></i> </li>
   <ul>
 </div>
 
